--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,61 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <div class="nav">
+      <ion-title size="small">WhatsApp</ion-title>
+      <ion-buttons>
+        <ion-button slot="end">
+          <ion-icon class="ion-margin-end" name="search-outline"></ion-icon>
+        </ion-button>
+        <ion-button>
+          <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </div>
   </ion-toolbar>
+  <div class="tabs">
+    <ion-grid class="ion-no-padding ion-text-center grid">
+      <ion-row>
+        <ion-toolbar>
+          <ion-segment
+            [(ngModel)]="selectedTabs"
+            (click)="segmentChanged($event)"
+            class="segment"
+            color="success"
+          >
+            <ion-segment-button value="camera">
+              <ion-icon name="camera"></ion-icon>
+            </ion-segment-button>
+            <ion-segment-button value="home">
+              <ion-label>Mensagens</ion-label>
+            </ion-segment-button>
+            <ion-segment-button value="status">
+              <ion-label>Status</ion-label>
+            </ion-segment-button>
+            <ion-segment-button value="chamadas">
+              <ion-label>Chamadas</ion-label>
+            </ion-segment-button>
+          </ion-segment>
+        </ion-toolbar>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+  <ion-list>
+    <ion-item
+      *ngFor="let item of users"
+      (click)="exibirMensagem(item)"
+      class="listItem"
+    >
+      <ion-avatar slot="start">
+        <img src="{{item.photo}}" alt="" />
+      </ion-avatar>
+      <ion-label
+        >{{item.firstName}}
+        <p>{{item.message}}</p>
+      </ion-label>
+      <p class="hour">{{item.hour}}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
