--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,39 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-title, ion-segment-button {
+  font-weight: 600;
+}
+ion-segment{
+  ion-segment-button:first-of-type{
+    --padding-end: 0;
+    --padding-start: 0;
+    min-width: 16px;
+  }
+}
+.listItem{
+  display: flex;
+  flex-direction: column;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+.hour{
+  font-size: 0.7rem;
+  display: flex;
+  align-self: start;
 
-  color: #8c8c8c;
-
-  margin: 0;
 }
+.grid{
+text-align-last: center;
 
-#container a {
-  text-decoration: none;
+}
+ion-slides {
+  height: 100%;
+  width: 100%;
+}
+.segment{
+
+  background-color:var(--ion-color-primary);
 }
