--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,17 +1,22 @@
-<ion-header>
+<ion-header *ngIf="isSearch === false">
   <ion-toolbar>
     <div class="nav">
       <ion-title size="small">WhatsApp</ion-title>
+
       <ion-buttons>
-        <ion-button slot="end">
+        <ion-button (click)="handleSearch()" slot="end">
           <ion-icon class="ion-margin-end" name="search-outline"></ion-icon>
         </ion-button>
-        <ion-button>
-          <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+        <ion-button (click)="tooglePopOver($event)">
+          <ion-icon
+            slot="icon-only"
+            name="ellipsis-vertical-outline"
+          ></ion-icon>
         </ion-button>
       </ion-buttons>
     </div>
   </ion-toolbar>
+
   <div class="tabs">
     <ion-grid class="ion-no-padding ion-text-center grid">
       <ion-row>
@@ -23,7 +28,7 @@
             color="success"
           >
             <ion-segment-button value="camera">
-              <ion-icon name="camera"></ion-icon>
+              <ion-icon class="camera" size="small" name="camera"></ion-icon>
             </ion-segment-button>
             <ion-segment-button value="home">
               <ion-label>Mensagens</ion-label>
@@ -38,6 +43,26 @@
         </ion-toolbar>
       </ion-row>
     </ion-grid>
+  </div>
+</ion-header>
+
+<ion-header *ngIf="isSearch === true">
+  <div>
+    <ion-toolbar>
+      <ion-searchbar
+        style="margin-top: 10px"
+        color="primary"
+        (ionCancel)="handleSearch()"
+        showCancelButton="always"
+        placeholder="Pesquisar..."
+      ></ion-searchbar>
+      <div class="chips">
+        <ion-chip *ngFor="let item of chips">
+          <ion-icon name="{{item.name}}"></ion-icon>
+          <ion-label>{{item.label}}</ion-label>
+        </ion-chip>
+      </div>
+    </ion-toolbar>
   </div>
 </ion-header>
 
