--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -34,6 +34,27 @@ ion-slides {
   width: 100%;
 }
 .segment{
-
   background-color:var(--ion-color-primary);
+
+}
+
+.camera{
+  display: flex;
+  width: 30px;
+}
+
+.chips{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  ion-label{
+    font-size: 10px;
+  }
+}
+ion-chip{
+  width: auto;
+  height: 24px;
+}
+ion-searchbar{
+  --box-shadow: none;
 }
