--- a/src/app/private-message/private-message.page.html
+++ b/src/app/private-message/private-message.page.html
@@ -10,7 +10,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="content">
+<ion-content [fullscreen]="true" class="content">
   <div class="container">
     <div
       class="baloon-general baloon-received recievedAnchor"
@@ -30,15 +30,19 @@
   </div>
 </ion-content>
 
-<ion-footer>
+<ion-footer class="footer2" [translucent]="true">
   <div class="footer1">
     <ion-button class="btn" size="small" slot="icon-only">
-      <ion-icon name="happy-outline"></ion-icon>
+      <ion-icon style="font-size: 20px" name="happy-outline"></ion-icon>
     </ion-button>
     <ion-input placeholder="Mensagem"></ion-input>
-    <ion-buttons>
-      <ion-icon name="attach-outline"></ion-icon>
-      <ion-icon name="camera"></ion-icon>
+    <ion-buttons slot="end">
+      <ion-icon
+        style="font-size: 20px"
+        class="ion-margin-end"
+        name="attach-outline"
+      ></ion-icon>
+      <ion-icon style="font-size: 20px" name="camera"></ion-icon>
     </ion-buttons>
   </div>
   <ion-button class="btn1" size="small" class="mic" color="secondary">
